# koji-habitude

./: .cursorrules  .gitattributes  .gitignore  CLI_ERROR_EXAMPLES.md  EXCEPTION_MIGRATION_SUMMARY.md  GOALS.md  IDEA.md  Makefile  README.md  TODO.md  VIBE.md  koji-habitude.spec  python3-koji-habitude.spec  setup.cfg
.cursor/: TESTING_RULES.md
.cursor/commands/: commit.md
.cursor/rules/: gh.mdc  main.mdc  tests.mdc
.github/workflows/: build_docs.yml  build_rpms.yml  build_wheel.yml  deploy_docs.yml  on_push.yml  on_release.yml  run_bandit.yml  run_tests.yml
docs/: conf.py  exceptions.rst  generate_schemas.py  index.rst  koji_habitude.rst  local_models.rst  overview.md  overview.rst  release-notes.rst  remote_models.rst  vibe.rst  yaml_format.rst
docs/cli/: apply.rst  compare.rst  diff.rst  dump.rst  edit.rst  expand.rst  fetch.rst  index.rst  list-templates.rst
docs/cli/template/: apply.rst  compare.rst  diff.rst  expand.rst  index.rst  show.rst
docs/koji_habitude/: cli.rst  exceptions.rst  loader.rst  models.rst  namespace.rst  processor.rst  resolver.rst  solver.rst  templates.rst  workflow.rst
docs/release-notes/: v0.9.0.md  v0.9.1.md
docs/yaml_format/: archive-type.rst  build-type.rst  channel.rst  content-generator.rst  external-repo.rst  group.rst  host.rst  multi.rst  permission.rst  tag.rst  target.rst  template.rst  user.rst
koji_habitude/: __init__.py  cli.py  dependency.py  exceptions.py  koji.py  koji_client.py  loader.py  namespace.py  object_map.py  processor.py  pydantic.py  resolver.py  solver.py  templates.py  workflow.py
koji_habitude/cli/: __init__.py  __main__.py  apply.py  compare.py  diff.py  dump.py  edit.py  expand.py  fetch.py  sync.py  template_cmd.py  templates.py  theme.py  util.py
koji_habitude/models/: __init__.py  archive_type.py  base.py  build_type.py  change.py  channel.py  compat.py  content_generator.py  external_repo.py  group.py  host.py  permission.py  tag.py  target.py  user.py
tests/: TESTING_RULES.md  __init__.py  test_data_loading.py  test_data_models.py  test_expansion.py  test_integration.py  test_loader.py  test_models.py  test_namespace.py  test_processor.py  test_resolver.py  test_solver.py  test_template_loading.py  test_templates.py  test_workflow.py
tests/cli/: __init__.py  test_cli_params.py
tests/data/: empty_documents.yaml  multiple_documents.yaml  single_document.yaml
tests/data/bad/: invalid_yaml.yaml  malformed.yaml  malformed_jinja2.yaml  not_yaml.txt  template_both_content_and_file.yaml  template_invalid_yaml.yaml  template_missing_content.yaml  template_missing_name.yaml
tests/data/data_loading/load_with_duplicate_objects/: duplicates.yaml
tests/data/data_loading/load_with_invalid_objects/: invalid.yaml
tests/data/demo/: deps.yml  gnutella.yml  product.yml  vars.yml
tests/data/integration/load_data_with_complex_template_structure/data/: developers.yaml
tests/data/integration/load_data_with_mixed_content/data/: mixed.yaml
tests/data/integration/load_data_with_mixed_content/templates/: full_developer.yaml
tests/data/integration/load_data_with_multiple_files/data/: tags.yaml
tests/data/integration/load_data_with_multiple_files/templates/: base_user.yaml  developer.yaml  user_with_tag.yaml
tests/data/integration/load_data_with_nested_templates/data/: developers.yaml
tests/data/integration/load_data_with_template_errors/data/: users.yaml
tests/data/integration/load_data_with_template_errors/templates/: error_template.yaml
tests/data/integration/load_data_with_template_validation_failure/data/: users.yaml
tests/data/integration/load_data_with_template_validation_failure/templates/: validated_template.yaml
tests/data/namespace/: test_basic_meta_template.yaml  test_basic_product_expansion.yaml  test_circular_template_dependency.yaml  test_conditional_meta_template.yaml  test_conditional_template_expansion.yaml  test_deferred_template_resolution.yaml  test_invalid_generated_template.yaml  test_invalid_jinja2_syntax.yaml  test_missing_template_deadlock.yaml  test_multi_stage_deferred.yaml  test_multiple_template_calls.yaml  test_nested_meta_template.yaml
tests/data/samples/: sample.yaml
tests/data/samples/nested/: deep.yml
tests/data/solver/: README.md  circular_dependencies.yaml  complex_circular.yaml  cross_dependencies.yaml  independent_objects.yaml  missing_dependencies.yaml  product_template.yaml  simple_chain.yaml  tag_external_repo.yaml  target_dependencies.yaml  testproduct.yaml  user_group_dependencies.yaml
tests/data/template_loading/create_template_registry/: test.yaml
tests/data/template_loading/expand_template_with_file/: user_template.j2
tests/data/template_loading/templates_empty_documents/: empty.yaml
tests/data/template_loading/templates_from_directory/: templates1.yaml  templates2.yaml
tests/data/template_loading/templates_missing_name/: no_name.yaml
tests/data/template_loading/templates_with_duplicates/: file1.yaml  file2.yaml
tests/data/template_loading/templates_with_yml_extension/: templates.yml
tests/data/templates/: complex.yml  empty_file.yaml  external_file.yaml  inline_content.yaml  multi_output.yaml  multiple_documents.yml  simple.yaml  single_document.yaml  target_template.j2  test_multi_edge_cases.yaml  test_multi_metadata.yaml  test_multi_names.yaml  test_multi_simple.yaml  with_leading_whitespace.yml
tests/test_models/: __init__.py  test_archive_type.py  test_base.py  test_build_type.py  test_channel.py  test_content_generator.py  test_external_repo.py  test_group.py  test_host.py  test_permission.py  test_registry.py  test_tag.py  test_target.py  test_user.py
tests/test_processor_models/: __init__.py  test_archive_type.py  test_build_type.py  test_channel.py  test_content_generator.py  test_external_repo.py  test_group.py  test_host.py  test_multicall.py  test_permission.py  test_tag.py  test_target.py  test_user.py
tools/: Containerfile.almalinux10  Containerfile.almalinux8  Containerfile.almalinux9  Containerfile.fedora  build.sh  profile_namespace.py  profile_yaml_interning.py
(+2 files in other folders)
