[metadata]
name = koji-habitude
version = 0.1.0

author = Christopher O'Brien
# O'Brien breaks a lot of tools
author_email = obriencj@gmail.com

description = Synchronizes local koji data expectations with a hub instance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/obriencj/koji-habitude

license = GNU General Public License v3
license_files =
  LICENSE

copyright_years = 2025

classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11


[options]
packages = find:
python_requires = >=3.8
include_package_data = true
install_requires =
  click
  koji
  PyYAML
  Jinja2
  pydantic


[options.extras_require]
test =
  pytest
  pytest-cov


[options.package_data]
koji_habitude =
  schemas/*.yml


[options.entry_points]
console_scripts =
  koji-habitude = koji_habitude.cli:main


[options.packages.find]
exclude =
  tests*


[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,.tox,.eggs,*.egg


[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*


[tox:tox]
envlist = flake8,mypy,twine,py38,py39,py310,py311
isolated_build = true
use_system_site_packages = true


[testenv]
deps = pytest
commands =
  python -B -m pytest {posargs}


[testenv:quicktest]
python = python3
deps = pytest
commands =
  python -B -m pytest {posargs}


[testenv:build]
deps =
  build
skip_install = true
commands =
  python -m build .


[testenv:flake8]
deps =
  flake8
commands =
  python -B -m flake8 koji_habitude


[testenv:mypy]
deps =
  mypy
  types-pyyaml
  git+https://github.com/obriencj/koji-typing.git
commands =
  python -B -m mypy {posargs:koji_habitude}


[testenv:twine]
deps =
  twine
skip_install = true
commands =
  python -B -m twine check dist/*


[testenv:sphinx]
deps =
  sphinx
  sphinx-autodoc-typehints
skip_install = false
commands =
  python -B -m sphinx.cmd.build -b dirhtml docs build/sphinx


[testenv:docs-gen]
deps =
  sphinx
  sphinx-autodoc-typehints
skip_install = false
commands =
  python docs/generate_schemas.py


[testenv:coverage]
deps =
  pytest
  pytest-cov
commands =
  python -B -m pytest --cov=koji_habitude --cov-report=html:build/coverage --cov-report=term-missing {posargs}


# The end.
