[metadata]
name = koji-habitude
version = 0.1.0

author = Christopher O'Brien
# O'Brien breaks a lot of tools
author_email = obriencj@gmail.com

description = Synchronizes local koji data expectations with a hub instance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/obriencj/koji-habitude

license = GNU General Public License v3
license_files =
  LICENSE

copyright_years = 2025

classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12


[options]
packages = find:
python_requires = >=3.8
include_package_data = true
install_requires =
  click
  koji
  PyYAML
  Jinja2
  pydantic


[options.extras_require]
test =
  pytest
  pytest-cov


[options.package_data]
koji_habitude =
  schemas/*.yml


[options.entry_points]
console_scripts =
  koji-habitude = koji_habitude.cli:main


[options.packages.find]
exclude =
  tests*


[tox:tox]
envlist = py36,py37,py38,py39,py310,py311,py312
isolated_build = true
use_system_site_packages = true


[testenv]
deps = pytest
commands =
  python -B -m pytest {posargs}


[testenv:py36]

# this prevents systems with newer pythons from exploding. For some
# reason virtualenv tries to run the venv's pip with its own python
# version, not the matching one. Due to insanity with the recent
# python leadership, there are breaking API changes in 3.11 and
# onwards which make the vendored 3.6 site packages fail.
download = False


[testenv:quicktest]
python = python3
deps = pytest
commands =
  python -B -m pytest {posargs}


[testenv:bandit]
commands =
  python -B -m bandit --ini setup.cfg \
    -qr koji_habitude/

deps =
  bandit

skip_install = True


[testenv:bandit-sarif]
commands =
  python -B -m bandit --ini setup.cfg \
    -f sarif -o bandit.sarif \
    -qr koji_habitude/
  python -B -m sarif summary bandit.sarif

deps =
  bandit
  bandit-sarif-formatter
  sarif-tools

skip_install = True


[testenv:build]
deps =
  build
skip_install = true
commands =
  python -B -m build .


[testenv:flake8]
deps =
  flake8
commands =
  python -B -m flake8 koji_habitude


[testenv:mypy]
deps =
  mypy
  types-pyyaml
  git+https://github.com/obriencj/koji-typing.git
commands =
  python -B -m mypy {posargs:koji_habitude}


[testenv:twine]
deps =
  twine
skip_install = true
commands =
  python -B -m twine check dist/*


[testenv:sphinx]
deps =
  sphinx
  sphinx-autodoc-typehints
  python-docs-theme
skip_install = false
commands =
  python -B -m sphinx.cmd.build -b dirhtml docs build/sphinx


[testenv:docs-gen]
deps =
  sphinx
  sphinx-autodoc-typehints
skip_install = false
commands =
  python docs/generate_schemas.py


[testenv:coverage]
deps =
  pytest
  pytest-cov
commands =
  python -B -m pytest --cov=koji_habitude --cov-report=html:build/coverage --cov-report=term-missing {posargs}


# === Tool settings ===

[flake8]
max-line-length = 78
extend-ignore =
  E501,
  E203,E303,E731,E741,
  F401,F812,
  W503,W504,

exclude =
  __pycache__
  .*
  build
  dist
  docs
  setup.py
  tests
  *.egg


[bandit]

# B101 complains about asserts
# B701 complains about Jinja2 auto-escaping, but we're not rendering HTML
skips = B101,B701


[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*


# The end.
